<resources>
    <string name="app_name">Sunny</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="string_search_city">选择您的城市</string>
    <string name="desc_zone_icon">zone icon</string>
    <string name="desc_city_icon">city icon</string>
    <string name="desc_expand">expand</string>
    <string name="string_cb">多城市管理</string>

    <string name="weather_fragment">天气详情</string>
    <string name="multi_city_fragment">多城市</string>
    <string name="multi_city">开启多城市</string>
    <string name="no_network">网络不好(˵¯͒⌢͗¯͒˵)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="api_error">出了点小问题，别担心，( •̀ .̫ •́ )✧</string>
    <string name="version_name">就看天气 Version-</string>
    <string name="can_not_find_version_name">找不到版本号</string>
    <string name="share_txt">欢迎使用“就看天气”，希望每天都是好心情，您可以在http://www.wandoujia.com/apps/com.xiecc.seeWeather下载</string>
    <string name="share_app">分享-就看天气</string>
    <string name="alipay">xcc3641@163.com</string>
    <string name="license">Copyright 2016 HugoXie  Licensed under the Apache License, Version 2.0 (the \"License\")</string>
    <string name="app_html">https://github.com/xcc3641/SeeWeather</string>
    <string name="readme">https://github.com/xcc3641/SeeWeather/blob/master/README.md</string>

    <string name="nav_city">选择城市</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="multi_cities">多城市管理</string>
    <string name="errorLocation">fail to locate,load default city..</string>

    <string name="aboutContent">就看天气该应用就是如同它的名字一样，只做一个单纯、简单的看天气软件。这么多天气软件，你选择了我，这是我的幸运。\n从15年10月上线，到目前经历两次重大改版，一次代码的重构，一次界面的大幅度改动，目的都是为了你们。
    在开源的过程中，收到了很多来自有趣的你们的邮件。\n我也曾遇到过棘手的问题无处咨询又谷歌不到。那个时候的我，也可能是现在的你。所以我希望能够帮助到你。</string>
    <string name="open_source">• RxJava: github.com/ReactiveX/RxJava\n• RxAndroid: github.com/ReactiveX/RxAndroid\n• Retrofit: github.com/square/retrofit\n• Glide: github.com/bumptech/glide\n• YujunZhu 设计师提供多城市卡片设计\n• 和风天气提供数据支持\n• 高德定位提供位置定位服务</string>
    <string name="bugTableUrl">https://www.wenjuan.com/s/YbqANfc/</string>

    <string-array name="cache_time">
        <item>禁止刷新</item>
        <item>每1小时</item>
        <item>每3小时</item>
        <item>每6小时</item>
    </string-array>

    <string-array name="city_hint">
        <item>北京</item>
        <item>上海</item>
        <item>广州</item>
        <item>深圳</item>
    </string-array>

    <string name="skip">跳过&#160;&#160;%ds</string>

    <string name="weather_suggesetion_clothes">穿衣指数---%s</string>
    <string name="weather_suggesetion_sports">运动指数---%s</string>
    <string name="weather_suggesetion_illness">感冒指数---%s</string>
    <string name="weather_suggesetion_travel">旅游指数---%s</string>

    <string name="weather_forecast_desc">%s。 %s %s %s km/h。 降水几率 %s%%</string>
    <string name="weather_forecast_temp">%s℃ - %s℃</string>

    <string name="multi_city_empty">你还没有添加城市噢 (´･_･`)</string>

    <!--splash-->
    <string name="splash_countdown_time">%ds</string>

    <!--settings-->
    <string name="setting_ui">界面</string>
    <string name="setting_change_icons">更换天气图标</string>
    <string-array name="icons">
        <item>图标一</item>
        <item>图标二</item>
    </string-array>
    <string name="setting_change_icons_sure">确定</string>
    <string name="setting_modify_icons_hint">切换成功,重启应用生效</string>
    <string name="setting_restart">重启</string>
    <string name="setting_anim_homepage">首页Item动画</string>
    <string name="setting_system">系统</string>
    <string name="setting_auto_update">自动刷新天气</string>
    <string name="setting_update_frequency">刷新频率</string>
    <string name="setting_update_summary">每%d小时更新</string>
    <string name="setting_notification_ongoing">通知栏常驻</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_cache_cleared_hint">缓存已清除</string>
    <!--main-->
    <string name="exit_app">退出Sunny</string>
    <string name="sure">确定</string>
    <!--main - weather info-->
    <string name="load_weather_successfully">加载完毕</string>
    <!--main - favorite cities-->
    <string name="main_delete_city_hint">是否删除该城市?</string>
    <string name="main_delete_city_confirm">删除</string>
    <string name="main_delete_city_undo">撤销</string>
    <string name="main_delete_city_message">已经将%s删掉了 Ծ‸ Ծ</string>

    <!--select city-->
    <string name="city_count">对不起，收藏城市不能超过3个</string>
    <string name="city_exists">对不起，该城市已存在</string>
</resources>
