<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory android:title="@string/setting_ui">
        <Preference
            android:key="change_icons"
            android:title="@string/setting_change_icons" />
        <CheckBoxPreference
            android:key="animation_start"
            android:title="@string/setting_anim_homepage" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_system">
        <SwitchPreference
            android:key="auto_update"
            android:title="@string/setting_auto_update" />
        <androidx.preference.SeekBarPreference
            android:dependency="auto_update"
            android:key="change_update_time"
            android:title="@string/setting_update_frequency"
            />
        <CheckBoxPreference
            android:key="notification_model"
            android:title="@string/setting_notification_ongoing"
            />
        <Preference
            android:key="clear_cache"
            android:title="@string/setting_clear_cache" />
    </PreferenceCategory>
</PreferenceScreen>